# pgp-dataset-essay

./: .gitignore  .justfile  README.md  anonymous-acm.sty  data_numbers.tex  main.tex  observablehq.config.js  package-lock.json  package.json  pyproject.toml  references.bib
.github/workflows/: gh-pages.yml
data/: README.md  documents.db
dataset-history/: pgp-dataset-history.csv  pgp-history.py
notebooks/: 01-documents-fragments.ipynb  02-documents-over-time.ipynb  03-metadata-available.ipynb  04-document_types.ipynb  05-tags.ipynb  06-languages-scripts.ipynb  07-dates-calendars.ipynb  08-scholarship-records.ipynb  09-rate-of-change.ipynb  10-numbers-for-essay.ipynb  pgp_dataset.ipynb  utils.py
src/: custom-style.css  index.md  languages.md  structuring.md
src/components/: upset.js
src/data/: documents.csv.js
src/exploration/: dates.md  index.md  languages.md
