[project]
name = "pgp-dataset-essay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "jupyterlab>=4.4.5",
    "pandas>=2.3.1",
    "undate>=0.5.1",
    "upsetplot>=0.9.0",
    "vl-convert-python>=1.8.0",
]



[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

# configure as a non-package
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
