[project]
name = "pgp-dataset-essay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "gitpython>=3.1.46",
    "jupyterlab>=4.4.5",
    "nbmanips>=2.1.3",
    "pandas>=2.3.1",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "treon>=0.1.4",
    "undate>=0.6",
    "upsetplot>=0.9.0",
    "vegafusion[embed]>=2.0.3",
    "vl-convert-python>=1.8.0",
]



[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

# configure as a non-package
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
